ADD change how it works section style

--- a/src/app/offerings/how-it-works/how-it-works.component.html
+++ b/src/app/offerings/how-it-works/how-it-works.component.html
@@ -1,11 +1,11 @@
-<div class="py-8 px-4 mx-auto max-w-screen-xl lg:py-16">
+<div class="mx-auto max-w-screen-xl">
     <h2 class="pb-2 text-4xl font-extrabold text-primary-100 mb-4 text-center dark:text-primary-50">{{ 'HOWITWORKS._title' | translate }}</h2>
     <p class="mb-8 text-lg font-normal text-gray-500 lg:text-xl sm:px-16 xl:px-48 dark:text-secondary-50 text-center">{{ 'HOWITWORKS._subtitle' | translate }}</p>
 
     <div class="grid lg:grid-cols-2 gap-8 sm:grid-cols-1">
         <!-- CUSTOMERS -->
-        <div class="border border-primary-100 dark:border-primary-50 rounded-lg p-8 md:p-12">
-            <div class="grid grid-cols-80/20 pb-4 h-1/4 mb-2">
+        <div class="border border-primary-100 dark:border-primary-50 rounded-lg p-4 md:p-8">
+            <div class="grid grid-cols-80/20">
                 <div class="flex justify-start grid grid-rows-20/80">
                     <h2 class="text-gray-900 dark:text-white text-xl font-normal mb-2">{{ 'HOWITWORKS.CUSTOMERS._title' | translate }}</h2>
                     <h2 class="text-gray-900 dark:text-white text-3xl font-extrabold">{{ 'HOWITWORKS.CUSTOMERS._subtitle' | translate }}</h2>
@@ -15,39 +15,16 @@
                 </div>
             </div>
             
-            <div class="h-2/4 text-lg font-normal text-gray-500 dark:text-gray-400 mb-4">
-                <ol class="max-w-md space-y-1 list-decimal list-inside mb-4">
-                    <li>
-                        <span class="font-semibold text-primary-100 dark:text-primary-50">{{ 'HOWITWORKS.CUSTOMERS._search_title' | translate }}:</span> {{ 'HOWITWORKS.CUSTOMERS._search_desc' | translate }}
-                    </li>
-                    <li>
-                        <span class="font-semibold text-primary-100 dark:text-primary-50">{{ 'HOWITWORKS.CUSTOMERS._compare_title' | translate }}:</span> {{ 'HOWITWORKS.CUSTOMERS._compare_desc' | translate }}
-                    </li>
-                    <li>
-                        <span class="font-semibold text-primary-100 dark:text-primary-50">{{ 'HOWITWORKS.CUSTOMERS._seamless_title' | translate }}:</span> {{ 'HOWITWORKS.CUSTOMERS._seamless_desc' | translate }}
-                    </li>
-                </ol>
-                  
-            </div>
-
-            <div class="flex h-1/4 items-end justify-between">
-
-                <button type="button" (click)="contact()" class="h-fit text-blue-600 dark:text-blue-500 hover:text-white border border-primary-100 dark:border-primary-50 hover:bg-primary-100 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center me-2 dark:text-primary-50 dark:hover:text-white dark:hover:bg-primary-50 dark:focus:ring-blue-800">
-                    {{ 'HOWITWORKS.CUSTOMERS._contact' | translate }}
-                </button>
-
-                <button type="button" (click)="goTo('/search')" class="h-fit text-blue-600 dark:text-blue-500 hover:text-white border border-primary-100 dark:border-primary-50 hover:bg-primary-100 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center me-2 dark:text-primary-50 dark:hover:text-white dark:hover:bg-primary-50 dark:focus:ring-blue-800">
-                    <!--<svg class="w-3.5 h-3.5 mr-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
-                        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
-                    </svg>-->
-                    {{ 'HOWITWORKS.CUSTOMERS._explore' | translate }}
-                </button>
+            <div class="text-lg font-normal text-gray-500 dark:text-gray-400">
+                <p>
+                    {{ 'HOWITWORKS.CUSTOMERS._description' | translate }}
+                </p>
             </div>
 
         </div>
         <!-- PROVIDERS -->
-        <div class="border border-primary-100 dark:border-primary-50 rounded-lg p-8 md:p-12">
-            <div class="grid grid-cols-80/20 pb-4 h-1/4 mb-2">
+        <div class="border border-primary-100 dark:border-primary-50 rounded-lg p-4 md:p-8">
+            <div class="grid grid-cols-80/20">
                 <div class="flex justify-start grid grid-rows-20/80">
                     <h2 class="text-gray-900 dark:text-white text-xl font-normal mb-2">{{ 'HOWITWORKS.PROVIDERS._title' | translate }}</h2>
                     <h2 class="text-gray-900 dark:text-white text-3xl font-extrabold">{{ 'HOWITWORKS.PROVIDERS._subtitle' | translate }}</h2>
@@ -57,33 +34,15 @@
                 </div>
             </div>
             
-            <div class="h-2/4 text-lg font-normal text-gray-500 dark:text-gray-400 mb-4">
-                <ol class="max-w-md space-y-1 list-decimal list-inside mb-4">
-                    <li>
-                        <span class="font-semibold text-primary-100 dark:text-primary-50">{{ 'HOWITWORKS.PROVIDERS._register_title' | translate }}:</span> {{ 'HOWITWORKS.PROVIDERS._register_desc' | translate }}
-                    </li>
-                    <li>
-                        <span class="font-semibold text-primary-100 dark:text-primary-50">{{ 'HOWITWORKS.PROVIDERS._verified_title' | translate }}:</span> {{ 'HOWITWORKS.PROVIDERS._verified_desc' | translate }}
-                    </li>
-                    <li>
-                        <span class="font-semibold text-primary-100 dark:text-primary-50">{{ 'HOWITWORKS.PROVIDERS._reach_title' | translate }}:</span> {{ 'HOWITWORKS.PROVIDERS._reach_desc' | translate }}
-                    </li>
-                </ol>
-                  
-            </div>
-
-            <div class="flex h-1/4 items-end justify-between">
-
-                <button type="button" (click)="contact()" target="_blank" class="h-fit text-blue-600 dark:text-blue-500 hover:text-white border border-primary-100 dark:border-primary-50 hover:bg-primary-100 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center me-2 dark:text-primary-50 dark:hover:text-white dark:hover:bg-primary-50 dark:focus:ring-blue-800">
-                    {{ 'HOWITWORKS.PROVIDERS._contact' | translate }}
-                </button>
-
-                <!--<button type="button" class="h-fit text-blue-600 dark:text-blue-500 hover:text-white border border-primary-100 dark:border-primary-50 hover:bg-primary-100 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center me-2 dark:text-primary-50 dark:hover:text-white dark:hover:bg-primary-50 dark:focus:ring-blue-800">
-                    <svg class="w-3.5 h-3.5 mr-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
-                        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
-                    </svg>
-                    {{ 'HOWITWORKS.PROVIDERS._onboard' | translate }}
-                </button>-->
+            <div class="text-lg font-normal text-gray-500 dark:text-gray-400">
+                <p>
+                    {{ 'HOWITWORKS.PROVIDERS._description_start' | translate }}
+                    <a href="https://knowledgebase.dome-marketplace.org/shelves/company-onboarding-process" target="_blank"
+                    class="font-medium mr-1 text-blue-600 dark:text-blue-500 hover:underline">
+                        {{ 'HOWITWORKS.PROVIDERS._link' | translate }}
+                    </a>
+                    {{ 'HOWITWORKS.PROVIDERS._description_end' | translate }}
+                </p>
             </div>
         </div>
     </div>
