--- a/src/app/pages/seller-offerings/offerings/seller-product-spec/create-product-spec/create-product-spec.component.html
+++ b/src/app/pages/seller-offerings/offerings/seller-product-spec/create-product-spec/create-product-spec.component.html
@@ -909,8 +909,25 @@
                     </div>
                 }
                 @if(showAttach){
-                    <h2 class="text-3xl font-bold text-primary-100 ml-4 dark:text-white">{{ 'CREATE_PROD_SPEC._attachments' | translate }}</h2>
-                    <h4 class="text-lg font-bold ml-4 dark:text-white">{{ 'CREATE_PROD_SPEC._add_prod_img' | translate }}</h4>
+                    <div class="inline-flex">
+                        <h2 class="text-3xl font-bold text-primary-100 ml-4 dark:text-white">{{ 'CREATE_PROD_SPEC._attachments' | translate }}</h2>
+                        <div class="ml-4 flex">
+                            <svg data-popover-target="popover-default" class="flex self-center w-6 h-6 text-primary-100" clip-rule="evenodd" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+                                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 11h2v5m-2 0h4m-2.592-8.5h.01M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z"/>
+                            </svg>
+                        </div> 
+                        <div data-popover id="popover-default" role="tooltip" class="absolute z-10 invisible inline-block w-64 text-sm text-gray-500 transition-opacity duration-300 bg-white border border-gray-200 rounded-lg shadow-sm opacity-0 dark:text-gray-400 dark:border-gray-600 dark:bg-gray-800">
+                            <div class="px-3 py-2 bg-gray-100 border-b border-gray-200 rounded-t-lg dark:border-gray-600 dark:bg-gray-700">
+                                <h3 class="font-semibold text-gray-900 dark:text-white">{{ 'CREATE_PROD_SPEC._file_res' | translate }}</h3>
+                            </div>
+                            <div class="px-3 py-2 inline-block">
+                                <p class="inline-block">{{ 'CREATE_PROD_SPEC._restrictions' | translate }}
+                                </p>
+                            </div>
+                            <div data-popper-arrow></div>
+                        </div>
+                    </div>
+                    <h4 class="text-lg font-bold ml-4 dark:text-white">{{ 'CREATE_PROD_SPEC._add_prod_img' | translate }}</h4> 
                     @if(showImgPreview){
                         <div class="relative isolate flex flex-col justify-end overflow-hidden rounded-2xl px-8 pb-8 pt-40 max-w-sm mx-auto m-4 shadow-lg">
                             <img src="{{imgPreview}}" class="absolute inset-0 h-full w-full object-cover">
@@ -939,9 +956,12 @@
                         </div>
                         <label class="font-bold ml-6 dark:text-white">{{ 'CREATE_PROD_SPEC._add_prod_img_url' | translate }}</label>
                         <div class="flex h-fit ml-6 mt-2 mb-2 w-full justify-between align-items-middle align-middle">
-                            <input #imgURL type="text" id="att-name" 
+                            <input #imgURL type="text" id="att-name"
+                            [formControl]="attImageName"
                             class="mb-2 bg-gray-50 dark:bg-secondary-300 border border-gray-300 dark:border-secondary-200 dark:text-white text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" />
-                            <button (click)="saveImgFromURL()" class="flex align-items-middle text-white bg-primary-100 rounded-3xl p-1 ml-2 h-fit">
+                            <button (click)="saveImgFromURL()"
+                            [disabled]="!attImageName.valid" [ngClass]="!attImageName.valid ? 'opacity-50' : 'hover:bg-primary-50'"                            
+                            class="flex align-items-middle text-white bg-primary-100 rounded-3xl p-1 ml-2 h-fit">
                                 <svg class="w-4 h-4 text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
                                     <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 11.917 9.724 16.5 19 7.5"/>                                    
                                 </svg>                                  
@@ -1013,7 +1033,8 @@
                             <div class="lg:flex lg:grid lg:grid-cols-2 w-full gap-4 align-items-middle align-middle border border-gray-200 dark:border-secondary-200 rounded-lg p-4">                            
                                 <div class="h-fit">
                                     <label for="att-name" class="font-bold text-lg dark:text-white">{{ 'PROFILE._name' | translate }}</label>
-                                    <input #attachName type="text" id="att-name" 
+                                    <input #attachName type="text" id="att-name" [formControl]="attFileName"
+                                    [ngClass]="attFileName.invalid == true ? 'border-red-600' : 'border-gray-300'"
                                     class="mb-2 bg-gray-50 dark:bg-secondary-300 border border-gray-300 dark:border-secondary-200 dark:text-white text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" />    
                                 </div>
                                 @if(attachToCreate.url==''){
@@ -1047,7 +1068,9 @@
 
                             </div>
                             <div class="flex w-full justify-items-center justify-center mt-4">
-                                <button type="button" (click)="saveAtt()" class="flex text-white justify-center bg-primary-100 hover:bg-primary-50 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center">
+                                <button type="button" (click)="saveAtt()"
+                                [disabled]="!attFileName.valid || attachToCreate.url == ''" [ngClass]="!attFileName.valid || attachToCreate.url == '' ? 'opacity-50' : 'hover:bg-primary-50'"
+                                class="flex text-white justify-center bg-primary-100 hover:bg-primary-50 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center">
                                     {{ 'CREATE_PROD_SPEC._save_att' | translate }}
                                     <svg class="rtl:rotate-180 w-3.5 h-3.5 ms-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
                                         <path stroke="currentColor" stroke-linecap="round" stroke-width="2" d="M11 16h2m6.707-9.293-2.414-2.414A1 1 0 0 0 16.586 4H5a1 1 0 0 0-1 1v14a1 1 0 0 0 1 1h14a1 1 0 0 0 1-1V7.414a1 1 0 0 0-.293-.707ZM16 20v-6a1 1 0 0 0-1-1H9a1 1 0 0 0-1 1v6h8ZM9 4h6v3a1 1 0 0 1-1 1h-4a1 1 0 0 1-1-1V4Z"/>
